--- a/api/appsettings.json
+++ b/api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=happy_paws_training;User=root;Password=PHW#84#jeor;"
+},
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +10,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
